--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ numpy = "^1.23.2"
 
 # wandb dependencies
 pandas = { version = "^1.5.0", optional = true }
-wandb = { version= ">=0.12,<0.14", optional = true }
+wandb = { version= ">=0.15", optional = true }
 
 # logging dependencies
 loguru = { version = "^0.6.0", optional = true }
@@ -48,23 +48,28 @@ logging = ["loguru"]
 hydra = ["hydra-core", "neoconfigen"]
 all = ["hydra-core", "loguru", "neoconfigen", "pandas", "wandb"]
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.format.dependencies]
 black = "^23.1"
-pytest = "^7.1.2"
-ruff = "0.0.270"
+
+[tool.poetry.group.lint.dependencies]
+ruff = "^0.0.285"
+
+[tool.poetry.group.docs.dependencies]
 darglint = "^1.8.0"
+sphinx = "*"
+autodocsumm = "*"
+typing-extensions = "*"
+furo = "*"
+toml = "*"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.1.2"
 pandas-stubs = ">=1.4.3.220718"
 
-[tool.poetry.group.ci]
+[tool.poetry.group.torchcpu]
 optional = true
 
-[tool.poetry.group.ci.dependencies]
-filelock = "*"
-jinja2 = "*"
-networkx = "*"
-sympy = "*"
-pillow = ">=5.3.0,<8.3.0 || >=8.4.0"
-requests = "*"
+[tool.poetry.group.torchcpu.dependencies]
 torch = { version = "*", source = "torchcpu", markers = "sys_platform == 'linux'" }
 
 [[tool.poetry.source]]
