Increase the isort line length
I need this because otherwise I cannot use ruff's formatter.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,7 @@ reportPrivateUsage = "none"
 reportUnnecessaryTypeIgnoreComment = "warning"
 
 [tool.ruff]
-line-length = 88  # for import sorting
+line-length = 100
 select = [
     "E", # pycodestyle
     "F", # pyflakes
