--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ loguru = { version = "^0.6.0", optional = true }
 # hydra dependencies
 hydra-core = { version = "^1.3.0", optional = true }
 neoconfigen = { version = ">=2.3.3", optional = true }
+attrs = { version = "^23.1.0", optional = true }
 
 [tool.poetry.extras]
 wandb = ["pandas", "wandb"]
