--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,8 +46,8 @@ attrs = { version = "^23.1.0", optional = true }
 [tool.poetry.extras]
 wandb = ["pandas", "wandb"]
 logging = ["loguru"]
-hydra = ["hydra-core", "neoconfigen"]
-all = ["hydra-core", "loguru", "neoconfigen", "pandas", "wandb"]
+hydra = ["attrs", hydra-core", "neoconfigen"]
+all = ["attrs", "hydra-core", "loguru", "neoconfigen", "pandas", "wandb"]
 
 [tool.poetry.group.format.dependencies]
 black = "^23.1"
