--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,30 +1,29 @@
 repos:
--   repo: https://github.com/PyCQA/autoflake
-    rev: v2.2.1
-    hooks:
-      - id: autoflake
-        args:
-          - --in-place
-          - --remove-all-unused-imports
-          - --remove-unused-variable
-          - --ignore-init-module-imports
--   repo: https://github.com/timothycrosley/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        args: 
-          - "--profile"
-          - "black"
--   repo: https://github.com/ambv/black
-    rev: 23.9.1
-    hooks:
-      - id: black
-        language_version: python3.10
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
-    hooks:
-      - id: check-merge-conflict
-      - id: check-toml
-      - id: check-yaml
-      - id: name-tests-test
-      - id: debug-statements
+- repo: https://github.com/PyCQA/autoflake
+  rev: v2.2.1
+  hooks:
+    - id: autoflake
+      args:
+        - --in-place
+        - --remove-all-unused-imports
+        - --remove-unused-variable
+        - --ignore-init-module-imports
+- repo: https://github.com/ambv/black
+  rev: 23.9.1
+  hooks:
+    - id: black
+      language_version: python3.10
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.4.0
+  hooks:
+    - id: check-merge-conflict
+    - id: check-toml
+    - id: check-yaml
+    - id: name-tests-test
+    - id: debug-statements
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.0.291
+  hooks:
+    - id: ruff
+      args: [--fix, --exit-non-zero-on-fix]
