--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,11 +8,13 @@ repos:
         - --remove-all-unused-imports
         - --remove-unused-variable
         - --ignore-init-module-imports
-- repo: https://github.com/ambv/black
-  rev: 23.9.1
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.0.291
   hooks:
-    - id: black
-      language_version: python3.10
+    - id: ruff
+      args: [--fix, --exit-non-zero-on-fix]  
+    - id: ruff-format
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.4.0
   hooks:
@@ -21,9 +23,3 @@ repos:
     - id: check-yaml
     - id: name-tests-test
     - id: debug-statements
-- repo: https://github.com/astral-sh/ruff-pre-commit
-  # Ruff version.
-  rev: v0.0.291
-  hooks:
-    - id: ruff
-      args: [--fix, --exit-non-zero-on-fix]
