--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,23 +52,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
-    - name: Install poetry
-      run: pipx install poetry
-    - name: Install dependencies
-      run: |
-        poetry env use 3.11
-        poetry install --no-interaction --no-root --only docs
-    - name: Check docstrings with darglint
-      run: |
-        poetry run darglint --docstring-style sphinx -v 2 -z long ranzen
-    - name: Build with sphinx
-      run: |
-        poetry run sphinx-build -W -b html ./docs ./docs/_build
+      # ----------------------------------------------
+      #  ----  check-out repo and set-up python ----
+      # ----------------------------------------------
+      - name: Check out repository
+        uses: actions/checkout@v3
+      # ----------------------------------------------
+      #  -----  install & configure poetry  -----
+      # ----------------------------------------------
+      - name: Install poetry
+        run: pipx install poetry
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          cache: 'poetry'
+
+      # ----------------------------------------------
+      # install dependencies if cache does not exist
+      # ----------------------------------------------
+      - name: Install dependencies
+        run: |
+          poetry env use 3.10
+          poetry install --no-interaction --no-root -E all --with torchcpu --without format --without lint --with docs
+      - name: Check docstrings with darglint
+        run: |
+          poetry run darglint --docstring-style sphinx -v 2 -z long ranzen
+      - name: Build with sphinx
+        run: |
+          poetry run sphinx-build -W -b html ./docs ./docs/_build
 
   run_tests_and_type_checking:
     needs: [format_with_black, lint_with_ruff, check_docstrings]
@@ -97,7 +109,7 @@ jobs:
       - name: Install dependencies
         run: |
           poetry env use 3.10
-          poetry install --no-interaction --no-root -E all --with torchcpu --without format --without lint --without docs
+          poetry install --no-interaction --no-root -E all --with torchcpu --without format --without lint
 
       # ----------------------------------------------
       #  -----         Run type checking        -----
