--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,9 +75,9 @@ jobs:
         run: |
           poetry env use 3.10
           poetry install --no-interaction --no-root -E all --with torchcpu --without format --without lint --with docs
-      - name: Check docstrings with darglint
+      - name: Check docstrings with pydoclint
         run: |
-          poetry run darglint --docstring-style sphinx -v 2 -z long ranzen
+          poetry run pydoclint ranzen
       - name: Build with sphinx
         run: |
           poetry run sphinx-build -W -b html ./docs ./docs/_build
