--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,3 @@
-[tool.black]
-line-length = 100
-target-version = ['py310']
-extend_exclude = ".undodir/*"
-
 [tool.poetry]
 name = "ranzen"
 version = "3.0.0.dev0"
@@ -48,11 +43,8 @@ logging = ["loguru"]
 hydra = ["attrs", "hydra-core", "neoconfigen"]
 all = ["attrs", "hydra-core", "loguru", "neoconfigen", "pandas", "wandb"]
 
-[tool.poetry.group.format.dependencies]
-black = "^23.1"
-
 [tool.poetry.group.lint.dependencies]
-ruff = ">=0.0.285"
+ruff = ">=0.2"
 
 [tool.poetry.group.docs]
 optional = true
@@ -100,6 +92,12 @@ reportUnnecessaryCast = "warning"
 
 [tool.ruff]
 line-length = 100
+target-version = "py310"
+
+[tool.ruff.format]
+exclude = [".undodir/*"]
+
+[tool.ruff.lint]
 select = [
     "E", # pycodestyle
     "F", # pyflakes
@@ -121,13 +119,12 @@ ignore = [
     "PLW2901", # overwriting loop variable
     "PLC0105", # covariant typevars have to end in "_co"
 ]
-target-version = "py310"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F403"]
 "tests/*" = ["FBT"]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-third-party = [
   "black",
   "hydra",
