--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Install dependencies
         run: |
           poetry env use 3.10
-          poetry install --no-interaction --no-root -E all --with torchcpu --without format --without lint --with docs
+          poetry install --no-interaction --no-root -E all --with torchcpu --without lint --with docs
       - name: Check docstrings with pydoclint
         run: |
           poetry run pydoclint ranzen
@@ -105,7 +105,7 @@ jobs:
       - name: Install dependencies
         run: |
           poetry env use 3.10
-          poetry install --no-interaction --no-root -E all --with torchcpu --without format --without lint
+          poetry install --no-interaction --no-root -E all --with torchcpu --without lint
 
       # ----------------------------------------------
       #  -----         Run type checking        -----
