--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,26 +28,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up python
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      # --- build docs ---
+      - name: Install poetry
+        run: pipx install poetry
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-
-      - name: Install sphinx
+      - name: Install dependencies
         run: |
-          pip install wheel
-          pip install sphinx autodocsumm typing_extensions furo toml
-
-      - name: Build docs
+          poetry env use 3.10
+          poetry install --no-interaction --no-root --all-extras --with docs,torchcpu --without test,lint
+      - name: Build with sphinx
         run: |
-          sphinx-build -b html ./docs ./docs/_build
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
+          poetry run sphinx-build -W -b html ./docs ./docs/_build
+      # -----------------
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v2
         with:
-          # Upload build output
           path: './docs/_build'
 
   # Deployment job
