Pin pyright for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,7 +105,7 @@ jobs:
       - name: Install dependencies
         run: |
           poetry env use 3.10
-          poetry install --no-interaction --no-root -E all --with torchcpu --without lint
+          poetry install --no-interaction --no-root -E all --with torchcpu,pyright --without lint
 
       # ----------------------------------------------
       #  -----         Run type checking        -----
@@ -116,6 +116,8 @@ jobs:
         with:
           # don't show warnings
           level: error
+          # use the version of pyright that we've installed with poetry above
+          version: PATH
 
       # ----------------------------------------------
       #  -----           Run Tests            -----
