--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,7 @@ updates:
     schedule:
       interval: "weekly"
     versioning-strategy: lockfile-only
+  - package-ecosystem: npm
+    directory: "/.github"
+    schedule:
+      interval: "weekly"
