--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ readme = "README.md"
 python = ">=3.10,<3.13"
 typing-extensions = ">=4.5.0"
 numpy = "^1.23.2"
+"backports.strenum" = { version = "^1.3.1", python = "<3.11" }
 
 # wandb dependencies
 pandas = { version = "^1.5.0", optional = true }
