--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ numpy = "^1.23.2"
 "backports.strenum" = { version = "^1.3.1", python = "<3.11" }
 
 # wandb dependencies
-pandas = { version = "^1.5.0", optional = true }
+pandas = { version = "^2.0.0", optional = true }
 wandb = { version = ">=0.15", optional = true }
 
 # logging dependencies
@@ -105,6 +105,7 @@ select = [
   "FBT", # boolean trap
   "I",   # isort
   # "N", # naming
+  "PD",  # pandas
   "PLC", # pylint convention
   "PLE", # pylint error
   # "PLR", # pylint refactor
