--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 typing-extensions = ">=4.5.0"
-numpy = "^1.23.2"
+numpy = "^2.0"
 "backports.strenum" = { version = "^1.3.1", python = "<3.11" }
 
 # wandb dependencies
@@ -105,6 +105,7 @@ select = [
   "FBT", # boolean trap
   "I",   # isort
   # "N", # naming
+  "NPY", # numpy
   "PD",  # pandas
   "PLC", # pylint convention
   "PLE", # pylint error
